# M1_SiN360

./: .cproject  .gitignore  .mxproject  .project  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  HARDWARE.md  Makefile  MonstaTek_M1_v0800.ioc  Project  Project_files.txt  README.md  README_License.md  STM32H573VITX_FLASH.ld  STM32H573VITX_RAM.ld  append_crc.py  build.sh  setup_arch.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Battery/: battery.c  battery.h
Core/Inc/: FreeRTOSConfig.h  FreeRTOS_CLI.h  app_freertos.h  cli_app.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: FreeRTOS_CLI.c  app_freertos.c  cli_app.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
Core/ThreadSafe/: stm32_lock.h
Drivers/BSP/Components/ST25R3916/: Release_Notes.html  rfal_analogConfigTbl.h  rfal_dpoTbl.h  rfal_features.h  rfal_rfst25r3916.c  st25r3916.c  st25r3916.h  st25r3916_aat.c  st25r3916_aat.h  st25r3916_com.c  st25r3916_com.h  st25r3916_irq.c  st25r3916_irq.h  st25r3916_led.c  st25r3916_led.h  st_errno.h  timer.c  timer.h  utils.h
Drivers/u8g2_csrc/: u8g2.h
Esp32_serial_flasher/app/common/: app_common.c  app_common.h  bin2array.cmake
Esp32_serial_flasher/app/stm32/: README.md  libc_compat.c
Esp32_serial_flasher/include/: esp_loader.h
Esp32_serial_flasher/port/: stm32_port.c  stm32_port.h
Esp32_serial_flasher/src/: esp_loader.c  protocol_uart.c
Esp_spi_at/esp-idf/components/esp_common/include/: esp_check.h  esp_err.h
Esp_spi_at/esp-idf/components/esp_driver_spi/include/driver/: spi_master.h
Esp_spi_at/esp-idf/components/esp_driver_spi/src/gpspi/: spi_master.c
Esp_spi_at/esp-idf/components/hal/include/hal/: spi_types.h
Esp_spi_at/esp-idf/components/log/include/hal/: spi_hal.h
Esp_spi_at/esp-idf/components/soc/esp32c6/include/soc/: soc_caps.h
Esp_spi_at/examples/at_spi_master/spi/stm32/main/: ctrl_api.h  esp_app_main.c  esp_app_main.h  esp_at_list.h  esp_queue.c  esp_queue.h  m1_at_response_parser.c  m1_at_response_parser.h
FatFs/R015/: ffconf.h
Infrared/irmp-irsnd/: README.txt  irmp.c  irmp.h  irmpconfig.h  irmpextlog.h  irmpprotocols.h  irmpsystem.h  irsnd.c  irsnd.h  irsndconfig.h
NFC/: RTE_Components.h  app_x-cube-nfcx.c  app_x-cube-nfcx.h  nfc_conf.h  rfal_platform.h
NFC/Middlewares/ST/rfal/: LICENSE.txt
NFC/Middlewares/ST/rfal/Inc/: rfal_analogConfig.h  rfal_cd.h  rfal_chip.h  rfal_defConfig.h  rfal_dpo.h  rfal_isoDep.h  rfal_nfc.h  rfal_nfcDep.h  rfal_nfca.h  rfal_nfcb.h  rfal_nfcf.h  rfal_nfcv.h  rfal_rf.h  rfal_st25tb.h  rfal_st25xv.h  rfal_t1t.h  rfal_t2t.h  rfal_t4t.h  rfal_utils.h
NFC/Middlewares/ST/rfal/Src/: rfal_analogConfig.c  rfal_cd.c  rfal_crc.c  rfal_crc.h  rfal_dpo.c  rfal_iso15693_2.c  rfal_iso15693_2.h  rfal_isoDep.c  rfal_nfc.c  rfal_nfcDep.c  rfal_nfca.c  rfal_nfcb.c  rfal_nfcf.c  rfal_nfcv.c  rfal_st25tb.c  rfal_st25xv.c  rfal_t1t.c  rfal_t2t.c  rfal_t4t.c
NFC/NFC_drv/common/: nfc_ctx.c  nfc_ctx.h  nfc_file.c  nfc_file.h  nfc_file_form.txt  nfc_fileio.c  nfc_fileio.h  nfc_storage.c  nfc_storage.h
NFC/NFC_drv/legacy/: nfc_driver.c  nfc_driver.h  nfc_listener.c  nfc_listener.h  nfc_poller.c  nfc_poller.h
Release/: MonstaTek_M1_v0800.elf  MonstaTek_M1_v0800.hex  MonstaTek_M1_v0800.map  makefile  objects.list  sources.mk
Sub_Ghz/: datatypes_utils.c  datatypes_utils.h  m1_sub_ghz_api.c  m1_sub_ghz_api.h  m1_sub_ghz_decenc.c  m1_sub_ghz_decenc.h  m1_sub_ghz_si4463_patch.h  si446x_cmd.h
Sub_Ghz/protocols/: m1_princeton_decode.c  m1_secplus_v2_decode.c
Sub_Ghz/radio_config/: m1_sub_ghz_915_rxtx_spc25_bwauto_baud106_dev200_e1_10_fsk.h  m1_sub_ghz_xxx_tx_test.h  si4463_revc2_300_rxtx_spacing250_bw200_baud10_error1_10_OOK.h  si4463_revc2_310_rxtx_spacing250_bw100_baud10_error1_10_OOK.h  si4463_revc2_315_rxtx_spacing250_bw100_baud10_error1_10_OOK.h  si4463_revc2_345_rxtx_spacing250_bw100_baud10_error1_10_OOK.h  si4463_revc2_372_rxtx_spacing250_bw200_baud10_error1_10_OOK.h  si4463_revc2_390_rxtx_spacing250_bw100_baud10_error1_10_OOK.h  si4463_revc2_433_92_rxtx_spacing250_bw100_baud10_error1_10_OOK.h  si4463_revc2_433_rxtx_spacing250_bw200_baud10_error1_10_OOK.h  si4463_revc2_915_00_rxtx_spacing25_bw10_baud4_8_error1_10_OOK.h  si4463_revc2_915_rxtx_spacing250_bw200_baud10_error1_10_OOK.h  si4463_revc2_patch.h
USB/Class/CDC/Inc/: usbd_cdc.h  usbd_cdc_if.h
USB/Class/CDC/Src/: usbd_cdc.c  usbd_cdc_if.c
USB/Class/CompositeBuilder/Inc/: usbd_composite_builder.h
USB/Class/HID/Src/: usbd_hid.c
USB/Class/MSC/Inc/: usbd_msc_storage.h
USB/Class/MSC/Src/: usbd_msc.c  usbd_msc_storage.c
USB/Core/Inc/: usbd_conf.h
USB/Core/Src/: usbd_conf.c  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake
cmake/m1_01/: CMakeLists.txt
docs/: APPS_WORKFLOWS.md  BADUSB_BADBLE_WORKFLOWS.md  BLE_WORKFLOWS.md  NFC_WORKFLOWS.md  SUBGHZ_RFID.md  WIFI_WORKFLOWS.md
documentation/: mbt.md  usingVSCode.md
lfrfid/: lfrfid.c  lfrfid.h  lfrfid_file.c  lfrfid_file.h  lfrfid_hal.c  lfrfid_hal.h  lfrfid_protocol.c  lfrfid_protocol.h  lfrfid_protocol_em4100.c  lfrfid_protocol_em4100.h  lfrfid_protocol_h10301.c  lfrfid_protocol_h10301.h  t5577.c  t5577.h
m1_csrc/: logger.c  logger.h  m1_apps.c  m1_apps.h  m1_badusb.c  m1_badusb.h  m1_bq25896.c  m1_bq25896.h  m1_bq27421.c  m1_bq27421.h  m1_bt.c  m1_bt.h  m1_buzzer.c  m1_buzzer.h  m1_cli.c  m1_cli.h  m1_cli_help.c  m1_compile_cfg.h  m1_core_config.c  m1_core_config.h  m1_display.c  m1_display.h  m1_display_data.c  m1_esp32_cmd.c  m1_esp32_cmd.h  m1_esp32_fw_update.c  m1_esp32_fw_update.h  m1_esp32_hal.c  m1_esp32_hal.h  m1_esp_hosted_config.h  m1_esp_hosted_dummy.c  m1_file_browser.c  m1_file_browser.h  m1_file_util.c  m1_file_util.h  m1_fusb302.c  m1_fusb302.h  m1_fw_update.c  m1_fw_update.h  m1_fw_update_bl.c  (+68 more)
scripts/: add_gpl_license_ref.py  program.jlink
